<resources>
    <string name="app_name">Imobiliaria Laranjais</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_anunciar">Anunciar</string>
    <string name="menu_meusAnuncios">Meus anuncios</string>
    <string name="menu_alugar">Alugar</string>
    <string name="menu_comprar">Comprar</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_feedback">Feedback</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_anunciar">Anunciar</string>

    <string-array name="tipos_imoveis">
        <item>Casa</item>
        <item>Apartamento</item>
        <item>Salão</item>
        <item>Terreno</item>
        <item>Kitnet</item>
        <item>Republica</item>
    </string-array>

    <string-array name="uf">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>