<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_anunciar"
            android:icon="@drawable/ic_menu_anunciar"
            android:title="@string/menu_anunciar" />
        <item
            android:id="@+id/nav_alugar"
            android:icon="@drawable/ic_menu_alugar"
            android:title="@string/menu_alugar" />
        <item
            android:id="@+id/nav_comprar"
            android:icon="@drawable/ic_menu_comprar"
            android:title="@string/menu_comprar" />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_sair" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
